--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -41,6 +41,7 @@
 // About Us: 
 
 .about-us-container {
+  overflow: hidden;
   background-color: #F5F5F5; /* Plain background color */
   background-size: cover;
   padding: 0 160px; /* Space on left and right */
