--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer-bs">
     <div class="row">
       <div class="col-md-3 footer-brand animated fadeInLeft">
-          <h2>LuxeClean Services</h2>
+          <h2>LuxClean Services</h2>
             <p>About Us - We are a dedicated team of professionals committed to providing exceptional cleaning services to our clients.</p>
             <p>© 2024, All rights reserved</p>
         </div>
@@ -17,7 +17,7 @@
           <div class="col-md-6">
                 <h4>Contact Info: </h4>
                 <ul class="list">
-                    <li>info@luxecleanservices.com</li>
+                    <li>info@luxcleanservices.com</li>
                     <li>+1234567890</li>
                 </ul>
             </div>
@@ -25,9 +25,9 @@
       <div class="col-md-2 footer-social animated fadeInDown">
           <h4>Follow Us:</h4>
           <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
+              <li><a href="#"><i class="fa-brands fa-facebook" style="color: #5bc2ce"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-x-twitter" style="color: #5bc2ce"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-instagram" style="color: #5bc2ce"></i></a></li>
             </ul>
         </div>
     </div>
